      6- ellweilcurve: allow input in ellisomat form
      7- [libpari] rnf_get_nfzk / nf_nfzk / nfeltup interface (czknf was
         useless, return and use nfzk)
      8- the rnf struct from rnfinit has changed, the new format is not
         compatible with pari-2.9
      9- improved eta(x^k)
     10- sinc(t_SER) more accurate

  Added
      1- [libpari] denom_i, numer_i, conj_i
BA    2- [libpari] Fp_pow_init, Flxq_pow_init, F2xq_pow_init
                   Fp_pow_table, Flxq_pow_table, F2xq_pow_table
                   gen_pow_init, gen_pow_table
      3- new GP function serchop
      4- [libpari] serchop_i
BA    5- [libpari] hash_init_GEN, hash_haskey_long, hash_insert_long
BA    6- [libpari] FpX_ddf_degree, FpXQX_ddf_degree, FlxqX_ddf_degree
      7- [libpari] checkell_i
      8- new GP function ellisotree
      9- mspolygon: add graphical representations (LaTeX form)
     10- [libpari] idealprodval, rnfdisc_factored
     11- [libpari] eta_ZXn, eta_product_ZXn
BA   12- New GP functions galoisgetgroup, galoisgetname
     13- [libpari] cxtoreal, cxEk
     14- [libpari] gmin_shallow, gmax_shallow

Done for version 2.10.0 (released 15/05/2018):
  Fixed
      1- subst(1+x^3+O(x^6),x,x+O(x^4)) -> SEGV [#1865]
BA    2- lfunartin was using too much stack
BA    3- fflog in char 3 or 5 was slower than intended
      4- RgX_blocks only worked for t_INT or t_POL coeffs
      5- spurious bnrdlisclist entries (with negative number of real
         places...) when modulus not a conductor
BA    6- modular algorithms could fail for very large input
BA    7- [mingw] writebin did not work
BA    8- forprime(N=2^100,oo,...) did not work
      9- mseval(W,s,p) did not check 'p' in weight 2
     10- matrixqz(m, -1 or -2) was very slow
     11- ZG_normalize destroyed its input
     12- [install] prototype code D0,U, did not work
BA   13- use of complex default function argument could lead to stack error.
     14- factorpadic(2*x^4+x^2,2,2) -> division by 0 [#1876]