@@ -181,11 +181,11 @@
 
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
-[;]
+matrix(0,2)
 
 [[2, [2, 0, 0, 0]~, 1, 4, 1] 1]
 
-[;]
+matrix(0,2)
 
 [[2, [2, 0, 0, 0]~, 1, 4, 1] -1]
 
@@ -209,7 +209,7 @@
 
 [[37, [-10, 1]~, 1, 1, [11, -1; 1, 10]] 1]
 
-[;]
+matrix(0,2)
 
 [[37, [-10, 1]~, 1, 1, [11, -1; 1, 10]] 1]
 
@@ -277,4 +277,4 @@
   ***   at top-level: idealred(nf,[2,Mat(1)])
   ***                 ^-----------------------
   *** idealred: incorrect type in idealtyp [extended ideal] (t_VEC).
-Total time spent: 156
+Total time spent: 104
